--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -46,13 +46,13 @@
                     @Html.DisplayFor(modelItem => item.Cost)
                 </td>
                 <td class="text-center">
-                    <a asp-action="AddOrEdit" class="btn btn-outline-primary" asp-route-employeeId="@item.Id">Edit</a>
+                    <a asp-action="AddOrEdit" class="btn btn-outline-primary" asp-route-Id="@item.Id">Edit</a>
                 </td>
                 <td class="text-center">
-                    <a asp-action="Details" class="btn btn-outline-info" asp-route-employeeId="@item.Id">Details</a>
+                    <a asp-action="Details" class="btn btn-outline-info" asp-route-Id="@item.Id">Details</a>
                 </td>
                 <td class="text-center">
-                    <a asp-action="Delete" class="btn btn-outline-danger" asp-route-employeeId="@item.Id">Delete</a>
+                    <a asp-action="Delete" class="btn btn-outline-danger" asp-route-Id="@item.Id">Delete</a>
                 </td>
             </tr>
             }
